# EasyOCR_project

./: .gitignore  README.md  main.py  main_date.py  pyproject.toml  readdate.py  readfile.py
