[tool.poetry]
name = "easyocr-project"
version = "0.1.0"
description = ""
authors = ["Ratthicha Parinthip <92798644+premepreme@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
easyocr = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
