[tool.poetry]
name = "easyocr-project"
version = "0.1.0"
description = ""
authors = ["Ratthicha Parinthip <92798644+premepreme@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
easyocr = "^1.7.1"
ruff = "^0.6.3"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
